fix phrase dark mode

--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -33,7 +33,7 @@
 			> .side.left {
 				.iconObject.withLetter { background-color: $colorBorderDark; }
 
-				.section { margin: 0px 0px 16px 0px; }
+				.section { margin: 0px 0px 12px 0px; }
 				.section.account { margin-bottom: 8px; }
 				.section:last-child { margin: 0px; }
 				.section {
